up sb and java